--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-router-dom": "^6.21.1",
     "react-tabs": "^6.0.2",
     "react-to-pdf": "^1.0.1",
+    "socket.io-client": "^4.7.4",
     "sort-by": "^1.2.0",
     "sweetalert2": "^11.10.2",
     "swiper": "^11.0.5",
