--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
     "@headlessui/react": "^1.7.17",
+    "@mui/icons-material": "^5.15.9",
+    "@mui/material": "^5.15.9",
     "@react-pdf-viewer/core": "^3.12.0",
     "@react-pdf/renderer": "^3.2.0",
     "@stripe/react-stripe-js": "^2.4.0",
