--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "sort-by": "^1.2.0",
     "sweetalert2": "^11.10.2",
     "swiper": "^11.0.5",
+    "timeago.js": "^4.0.0-beta.3",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
